--- a/Financial_Modeling/2_Classification_Modeling/1_SEC_Scraper.ipynb
+++ b/Financial_Modeling/2_Classification_Modeling/1_SEC_Scraper.ipynb
@@ -6,11 +6,12 @@
    "source": [
     "# Scrapping the SEC for Document Filings\n",
     "\n",
-    "### Notebook Index:\n",
+    "### Index:\n",
     "\n",
     "- [Establishing Contact with the SEC Website](#Website)\n",
     "- [Scraper Function](#Scraper)\n",
     "- [Scraping the SEC](#Scraping)\n",
+    "- [Inspecting the Data](#Data)\n",
     "\n",
     "-----\n",
     "\n",
@@ -98,7 +99,18 @@
    "source": [
     "<a class=\"anchor\" id=\"Scraper\"></a>\n",
     "\n",
-    "# Creating a Function to Scrape the SEC:"
+    "# Creating a Function to Scrape the SEC:\n",
+    "\n",
+    "**The Following Function will:**\n",
+    "- Accept a company's stock ticker and use the symbol to scrape data from the [SEC Website](https://www.sec.gov/).\n",
+    "- Use the BeautifulSoup and Selector libraries to request & establish a connection with the website according to the company.\n",
+    "- Clean the lxml text for every value extracted.\n",
+    "- Will Extract (Scrape) the following specifications into a pandas dataframe:\n",
+    "    - Document Filings\n",
+    "    - Date Filed\n",
+    "    - Filing Serial Number\n",
+    "    - Filing Description\n",
+    "- The Date will be converted into time, placed as the index, and sorted in ascending order."
    ]
   },
   {
@@ -159,46 +171,53 @@
     "\n",
     "# Scraping the SEC:\n",
     "\n",
+    "The following companies will be scraped:\n",
+    "\n",
     "- Apple, Inc. - AAPL\n",
     "- Facebook, Inc. - FB\n",
     "- Google LLC - GOOGL\n",
-    "- JPMorgan Chase & Co. - JPMorgan\n",
-    "- The Goldman Sachs Group, Inc. - GoldmanSachs\n",
-    "- Moody's Corporation - Moodys\n",
+    "- JPMorgan Chase & Co. - JPM\n",
+    "- The Goldman Sachs Group, Inc. - GS\n",
+    "- Moody's Corporation - MCO\n",
     "- The International Business Machines Corporation (IBM) - IBM\n",
-    "- Twitter Inc. - Twitter\n",
-    "- BlackRock, Inc. - BlackRock\n",
-    "- Microsoft Corporation - Micrisoft"
+    "- Twitter Inc. - TWTTR\n",
+    "- BlackRock, Inc. - BLK\n",
+    "- Microsoft Corporation - MSFT"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "company_name = 'JPMorgan'"
+    "company_name = 'Apple'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = scraper('JPM')"
+    "df = scraper('AAPL')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Inspecting the Data:"
+    "-------\n",
+    "<a class=\"anchor\" id=\"Data\"></a>\n",
+    "\n",
+    "# Inspecting the Data\n",
+    "\n",
+    "### Inspecting the Earliest Filing Scraped:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -235,34 +254,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2018-06-12</th>\n",
-       "      <td>424B2</td>\n",
-       "      <td>Prospectus [Rule 424(b)(2)]Acc-no: 0000950103-...</td>\n",
-       "      <td>333-22267218893960</td>\n",
+       "      <th>1994-01-26</th>\n",
+       "      <td>424B5</td>\n",
+       "      <td>Prospectus [Rule 424(b)(5)]Acc-no: 0000891618-...</td>\n",
+       "      <td>033-6231094502696</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-06-12</th>\n",
-       "      <td>424B2</td>\n",
-       "      <td>Prospectus [Rule 424(b)(2)]Acc-no: 0001615774-...</td>\n",
-       "      <td>333-22267218895296</td>\n",
+       "      <th>1994-01-26</th>\n",
+       "      <td>10-Q</td>\n",
+       "      <td>Quarterly report [Sections 13 or 15(d)]Acc-no:...</td>\n",
+       "      <td>000-1003094502732</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-06-12</th>\n",
-       "      <td>424B2</td>\n",
-       "      <td>Prospectus [Rule 424(b)(2)]Acc-no: 0000891092-...</td>\n",
-       "      <td>333-22267218894263</td>\n",
+       "      <th>1994-02-10</th>\n",
+       "      <td>SC 13G/A</td>\n",
+       "      <td>[Amend] Statement of acquisition of beneficial...</td>\n",
+       "      <td>005-3363294505635</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-06-12</th>\n",
-       "      <td>424B2</td>\n",
-       "      <td>Prospectus [Rule 424(b)(2)]Acc-no: 0001615774-...</td>\n",
-       "      <td>333-22267218894207</td>\n",
+       "      <th>1994-02-17</th>\n",
+       "      <td>SC 13G/A</td>\n",
+       "      <td>[Amend] Statement of acquisition of beneficial...</td>\n",
+       "      <td>005-3363294510471</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-06-12</th>\n",
-       "      <td>424B2</td>\n",
-       "      <td>Prospectus [Rule 424(b)(2)]Acc-no: 0001615774-...</td>\n",
-       "      <td>333-22267218893968</td>\n",
+       "      <th>1994-02-18</th>\n",
+       "      <td>SC 13G</td>\n",
+       "      <td>Statement of acquisition of beneficial ownersh...</td>\n",
+       "      <td>005-3363200000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -271,22 +290,22 @@
       "text/plain": [
        "           document_type                                        description  \\\n",
        "date                                                                          \n",
-       "2018-06-12         424B2  Prospectus [Rule 424(b)(2)]Acc-no: 0000950103-...   \n",
-       "2018-06-12         424B2  Prospectus [Rule 424(b)(2)]Acc-no: 0001615774-...   \n",
-       "2018-06-12         424B2  Prospectus [Rule 424(b)(2)]Acc-no: 0000891092-...   \n",
-       "2018-06-12         424B2  Prospectus [Rule 424(b)(2)]Acc-no: 0001615774-...   \n",
-       "2018-06-12         424B2  Prospectus [Rule 424(b)(2)]Acc-no: 0001615774-...   \n",
+       "1994-01-26         424B5  Prospectus [Rule 424(b)(5)]Acc-no: 0000891618-...   \n",
+       "1994-01-26          10-Q  Quarterly report [Sections 13 or 15(d)]Acc-no:...   \n",
+       "1994-02-10      SC 13G/A  [Amend] Statement of acquisition of beneficial...   \n",
+       "1994-02-17      SC 13G/A  [Amend] Statement of acquisition of beneficial...   \n",
+       "1994-02-18        SC 13G  Statement of acquisition of beneficial ownersh...   \n",
        "\n",
-       "                   file_number  \n",
-       "date                            \n",
-       "2018-06-12  333-22267218893960  \n",
-       "2018-06-12  333-22267218895296  \n",
-       "2018-06-12  333-22267218894263  \n",
-       "2018-06-12  333-22267218894207  \n",
-       "2018-06-12  333-22267218893968  "
+       "                  file_number  \n",
+       "date                           \n",
+       "1994-01-26  033-6231094502696  \n",
+       "1994-01-26  000-1003094502732  \n",
+       "1994-02-10  005-3363294505635  \n",
+       "1994-02-17  005-3363294510471  \n",
+       "1994-02-18  005-3363200000000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,8 +315,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inspecting the Latest Filing Scraped:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -334,34 +360,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2018-07-27</th>\n",
-       "      <td>424B2</td>\n",
-       "      <td>Prospectus [Rule 424(b)(2)]Acc-no: 0001615774-...</td>\n",
-       "      <td>333-22267218973978</td>\n",
+       "      <th>2018-03-07</th>\n",
+       "      <td>SD</td>\n",
+       "      <td>Acc-no: 0001193125-18-073716 (34 Act)  Size: 8...</td>\n",
+       "      <td>001-3674318674202</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-07-27</th>\n",
-       "      <td>424B2</td>\n",
-       "      <td>Prospectus [Rule 424(b)(2)]Acc-no: 0000891092-...</td>\n",
-       "      <td>333-22267218973571</td>\n",
+       "      <th>2018-05-01</th>\n",
+       "      <td>8-K</td>\n",
+       "      <td>Current report, items 2.02 and 9.01\\nAcc-no: 0...</td>\n",
+       "      <td>001-3674318795935</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-07-27</th>\n",
-       "      <td>424B2</td>\n",
-       "      <td>Prospectus [Rule 424(b)(2)]Acc-no: 0001615774-...</td>\n",
-       "      <td>333-22267218972893</td>\n",
+       "      <th>2018-05-02</th>\n",
+       "      <td>10-Q</td>\n",
+       "      <td>Quarterly report [Sections 13 or 15(d)]Acc-no:...</td>\n",
+       "      <td>001-3674318800115</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-07-27</th>\n",
-       "      <td>424B2</td>\n",
-       "      <td>Prospectus [Rule 424(b)(2)]Acc-no: 0001615774-...</td>\n",
-       "      <td>333-22267218974543</td>\n",
+       "      <th>2018-05-07</th>\n",
+       "      <td>8-K</td>\n",
+       "      <td>Current report, items 8.01 and 9.01\\nAcc-no: 0...</td>\n",
+       "      <td>001-3674318811649</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2018-07-27</th>\n",
-       "      <td>424B2</td>\n",
-       "      <td>Prospectus [Rule 424(b)(2)]Acc-no: 0001615774-...</td>\n",
-       "      <td>333-22267218975317</td>\n",
+       "      <th>2018-05-08</th>\n",
+       "      <td>8-K/A</td>\n",
+       "      <td>[Amend] Current report, item 8.01\\nAcc-no: 000...</td>\n",
+       "      <td>001-3674318812776</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -370,35 +396,28 @@
       "text/plain": [
        "           document_type                                        description  \\\n",
        "date                                                                          \n",
-       "2018-07-27         424B2  Prospectus [Rule 424(b)(2)]Acc-no: 0001615774-...   \n",
-       "2018-07-27         424B2  Prospectus [Rule 424(b)(2)]Acc-no: 0000891092-...   \n",
-       "2018-07-27         424B2  Prospectus [Rule 424(b)(2)]Acc-no: 0001615774-...   \n",
-       "2018-07-27         424B2  Prospectus [Rule 424(b)(2)]Acc-no: 0001615774-...   \n",
-       "2018-07-27         424B2  Prospectus [Rule 424(b)(2)]Acc-no: 0001615774-...   \n",
+       "2018-03-07            SD  Acc-no: 0001193125-18-073716 (34 Act)  Size: 8...   \n",
+       "2018-05-01           8-K  Current report, items 2.02 and 9.01\\nAcc-no: 0...   \n",
+       "2018-05-02          10-Q  Quarterly report [Sections 13 or 15(d)]Acc-no:...   \n",
+       "2018-05-07           8-K  Current report, items 8.01 and 9.01\\nAcc-no: 0...   \n",
+       "2018-05-08         8-K/A  [Amend] Current report, item 8.01\\nAcc-no: 000...   \n",
        "\n",
-       "                   file_number  \n",
-       "date                            \n",
-       "2018-07-27  333-22267218973978  \n",
-       "2018-07-27  333-22267218973571  \n",
-       "2018-07-27  333-22267218972893  \n",
-       "2018-07-27  333-22267218974543  \n",
-       "2018-07-27  333-22267218975317  "
+       "                  file_number  \n",
+       "date                           \n",
+       "2018-03-07  001-3674318674202  \n",
+       "2018-05-01  001-3674318795935  \n",
+       "2018-05-02  001-3674318800115  \n",
+       "2018-05-07  001-3674318811649  \n",
+       "2018-05-08  001-3674318812776  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.tail()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "-------------"
    ]
   },
   {
