--- a/Forecasting_WNV/Notebooks-Master/01B_Data_Cleansing_Traps_Master.ipynb
+++ b/Forecasting_WNV/Notebooks-Master/01B_Data_Cleansing_Traps_Master.ipynb
@@ -58,18 +58,7 @@
    "outputs": [],
    "source": [
     "with open('../Cleansed_Data/codes_df.pkl', 'rb') as f:\n",
-    "    codes_df = pickle.load(f)\n",
-    "\n",
-    "with open('../Cleansed_Data/temperature_df.pkl', 'rb') as f:\n",
-    "    temperature_df = pickle.load(f)    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Calculate Total Mosquitos Per Trap\n",
-    "- Fix this so we don't drop columns"
+    "    codes_df = pickle.load(f)"
    ]
   },
   {
@@ -78,16 +67,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cols = [col for col in df.columns if col not in ['NumMosquitos', 'WnvPresent']]\n",
-    "# df = df.groupby(cols, as_index=False).sum()\n",
-    "# df['WnvPresent'] = (df.WnvPresent>0).astype(int)"
+    "with open('../Cleansed_Data/new_weather_df.pkl', 'rb') as f:\n",
+    "    new_weather_df = pickle.load(f)    "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Join codes_df and temperature_df"
+    "## Calculate Total Mosquitos Per Trap"
    ]
   },
   {
@@ -96,8 +84,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.join(temperature_df, on='Date')\n",
-    "df = df.join(codes_df, on='Date', rsuffix=\"_code_\")"
+    "cols = [col for col in df.columns if col not in ['NumMosquitos', 'WnvPresent']]\n",
+    "df = df.groupby(cols, as_index=False).sum()\n",
+    "df['WnvPresent'] = (df.WnvPresent>0).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Join codes_df and new_weather_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.join(codes_df, on='Date', rsuffix=\"_code_\")\n",
+    "df = df.join(new_weather_df, on='Date')"
    ]
   },
   {
@@ -109,11 +115,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Month'] = df.Date.str[5:7]\n"
+    "df['Month'] = df.Date.str[5:7]"
    ]
   },
   {
@@ -125,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,416 +192,6 @@
     "with open('../Cleansed_Data/y.pkl','wb') as f:\n",
     "    pickle.dump(y, f)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Latitude</th>\n",
-       "      <td>41.954690</td>\n",
-       "      <td>41.954690</td>\n",
-       "      <td>41.994991</td>\n",
-       "      <td>41.974089</td>\n",
-       "      <td>41.974089</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Longitude</th>\n",
-       "      <td>-87.800991</td>\n",
-       "      <td>-87.800991</td>\n",
-       "      <td>-87.769279</td>\n",
-       "      <td>-87.824812</td>\n",
-       "      <td>-87.824812</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NumMosquitos</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>4.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Tavg</th>\n",
-       "      <td>75.500000</td>\n",
-       "      <td>75.500000</td>\n",
-       "      <td>75.500000</td>\n",
-       "      <td>75.500000</td>\n",
-       "      <td>75.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Tmax</th>\n",
-       "      <td>88.000000</td>\n",
-       "      <td>88.000000</td>\n",
-       "      <td>88.000000</td>\n",
-       "      <td>88.000000</td>\n",
-       "      <td>88.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Tmin</th>\n",
-       "      <td>62.500000</td>\n",
-       "      <td>62.500000</td>\n",
-       "      <td>62.500000</td>\n",
-       "      <td>62.500000</td>\n",
-       "      <td>62.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BR</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>HZ</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>RA</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TSRA</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>VCTS</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>FU</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TS</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>DZ</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BCFG</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>FG+</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MIFG</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>FG</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SQ</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SN</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>VCFG</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GR</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Month_05</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Month_06</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Month_07</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Month_08</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Month_09</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Month_10</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Species_CULEX ERRATICUS</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Species_CULEX PIPIENS</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Species_CULEX PIPIENS/RESTUANS</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Species_CULEX RESTUANS</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Species_CULEX SALINARIUS</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Species_CULEX TARSALIS</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Species_CULEX TERRITANS</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                        0          1          2          3  \\\n",
-       "Latitude                        41.954690  41.954690  41.994991  41.974089   \n",
-       "Longitude                      -87.800991 -87.800991 -87.769279 -87.824812   \n",
-       "NumMosquitos                     1.000000   1.000000   1.000000   1.000000   \n",
-       "Tavg                            75.500000  75.500000  75.500000  75.500000   \n",
-       "Tmax                            88.000000  88.000000  88.000000  88.000000   \n",
-       "Tmin                            62.500000  62.500000  62.500000  62.500000   \n",
-       "BR                               1.000000   1.000000   1.000000   1.000000   \n",
-       "HZ                               1.000000   1.000000   1.000000   1.000000   \n",
-       "RA                               0.000000   0.000000   0.000000   0.000000   \n",
-       "TSRA                             0.000000   0.000000   0.000000   0.000000   \n",
-       "VCTS                             0.000000   0.000000   0.000000   0.000000   \n",
-       "FU                               0.000000   0.000000   0.000000   0.000000   \n",
-       "TS                               0.000000   0.000000   0.000000   0.000000   \n",
-       "DZ                               0.000000   0.000000   0.000000   0.000000   \n",
-       "BCFG                             0.000000   0.000000   0.000000   0.000000   \n",
-       "FG+                              0.000000   0.000000   0.000000   0.000000   \n",
-       "MIFG                             0.000000   0.000000   0.000000   0.000000   \n",
-       "FG                               0.000000   0.000000   0.000000   0.000000   \n",
-       "SQ                               0.000000   0.000000   0.000000   0.000000   \n",
-       "SN                               0.000000   0.000000   0.000000   0.000000   \n",
-       "VCFG                             0.000000   0.000000   0.000000   0.000000   \n",
-       "GR                               0.000000   0.000000   0.000000   0.000000   \n",
-       "Month_05                         1.000000   1.000000   1.000000   1.000000   \n",
-       "Month_06                         0.000000   0.000000   0.000000   0.000000   \n",
-       "Month_07                         0.000000   0.000000   0.000000   0.000000   \n",
-       "Month_08                         0.000000   0.000000   0.000000   0.000000   \n",
-       "Month_09                         0.000000   0.000000   0.000000   0.000000   \n",
-       "Month_10                         0.000000   0.000000   0.000000   0.000000   \n",
-       "Species_CULEX ERRATICUS          0.000000   0.000000   0.000000   0.000000   \n",
-       "Species_CULEX PIPIENS            0.000000   0.000000   0.000000   0.000000   \n",
-       "Species_CULEX PIPIENS/RESTUANS   1.000000   0.000000   0.000000   1.000000   \n",
-       "Species_CULEX RESTUANS           0.000000   1.000000   1.000000   0.000000   \n",
-       "Species_CULEX SALINARIUS         0.000000   0.000000   0.000000   0.000000   \n",
-       "Species_CULEX TARSALIS           0.000000   0.000000   0.000000   0.000000   \n",
-       "Species_CULEX TERRITANS          0.000000   0.000000   0.000000   0.000000   \n",
-       "\n",
-       "                                        4  \n",
-       "Latitude                        41.974089  \n",
-       "Longitude                      -87.824812  \n",
-       "NumMosquitos                     4.000000  \n",
-       "Tavg                            75.500000  \n",
-       "Tmax                            88.000000  \n",
-       "Tmin                            62.500000  \n",
-       "BR                               1.000000  \n",
-       "HZ                               1.000000  \n",
-       "RA                               0.000000  \n",
-       "TSRA                             0.000000  \n",
-       "VCTS                             0.000000  \n",
-       "FU                               0.000000  \n",
-       "TS                               0.000000  \n",
-       "DZ                               0.000000  \n",
-       "BCFG                             0.000000  \n",
-       "FG+                              0.000000  \n",
-       "MIFG                             0.000000  \n",
-       "FG                               0.000000  \n",
-       "SQ                               0.000000  \n",
-       "SN                               0.000000  \n",
-       "VCFG                             0.000000  \n",
-       "GR                               0.000000  \n",
-       "Month_05                         1.000000  \n",
-       "Month_06                         0.000000  \n",
-       "Month_07                         0.000000  \n",
-       "Month_08                         0.000000  \n",
-       "Month_09                         0.000000  \n",
-       "Month_10                         0.000000  \n",
-       "Species_CULEX ERRATICUS          0.000000  \n",
-       "Species_CULEX PIPIENS            0.000000  \n",
-       "Species_CULEX PIPIENS/RESTUANS   0.000000  \n",
-       "Species_CULEX RESTUANS           1.000000  \n",
-       "Species_CULEX SALINARIUS         0.000000  \n",
-       "Species_CULEX TARSALIS           0.000000  \n",
-       "Species_CULEX TERRITANS          0.000000  "
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X.head().T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -614,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
