--- a/Forecasting_WNV/Notebooks-Master/02_Preprocessing_Master.ipynb
+++ b/Forecasting_WNV/Notebooks-Master/02_Preprocessing_Master.ipynb
@@ -16,17 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -38,12 +30,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense\n",
-    "from keras.utils import to_categorical\n",
-    "from keras.optimizers import Adam"
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -55,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,12 +57,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Drop NumMosquitos from X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = X.drop('NumMosquitos', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Train Test Split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,13 +94,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "ss = StandardScaler()\n",
     "X_train_ss = pd.DataFrame(ss.fit_transform(X_train), columns=X_train.columns, index=X_train.index)\n",
-    "X_test_ss = ss.transform(X_test)"
+    "X_test_ss = pd.DataFrame(ss.fit_transform(X_test), columns=X_test.columns, index=X_test.index)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../Objects/ss.pkl','wb') as f:\n",
+    "    pickle.dump(ss, f)"
    ]
   },
   {
@@ -109,10 +122,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "with open('../Cleansed_Data/X_train.pkl','wb') as f:\n",
+    "    pickle.dump(X_train, f)\n",
+    "    \n",
+    "with open('../Cleansed_Data/X_test.pkl','wb') as f:\n",
+    "    pickle.dump(X_test, f)\n",
+    "\n",
     "with open('../Cleansed_Data/X_train_ss.pkl','wb') as f:\n",
     "    pickle.dump(X_train_ss, f)\n",
     "    \n",
@@ -150,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
